# libewf

./: ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  libewf.pc  libewf.pc.in  libewf.spec  libewf.spec.in
borlandc/: Makefile.in
common/: Makefile.am  Makefile.in  config.h  config.h.in  types.h
documents/: Makefile.in
ewftools/: Makefile.am  Makefile.in  device_handle.c  ewfacquire.c
include/: Makefile.in  libewf.h
libbfio/: Makefile.am  Makefile.in  libbfio_definitions.h
liberror/: Makefile.am  Makefile.in  liberror.h  liberror_definitions.h  liberror_error.c  liberror_error.h  liberror_types.h
libewf/: Makefile.in  libewf_definitions.h  libewf_handle.c  libewf_io_handle.c  libewf_metadata.c  libewf_segment_file.c  libewf_segment_table.c  libewf_write_io_handle.c  libewf_write_io_handle.h
libnotify/: Makefile.am  Makefile.in  libnotify.c  libnotify.h
libsystem/: Makefile.am  Makefile.in  libsystem.h  libsystem_date_time.c  libsystem_date_time.h  libsystem_directory.h  libsystem_directory_io.h  libsystem_error.c  libsystem_error.h  libsystem_file.c  libsystem_file.h  libsystem_file_io.h  libsystem_file_stream.h  libsystem_getopt.c  libsystem_getopt.h  libsystem_glob.c  libsystem_glob.h  libsystem_libuna.h  libsystem_notify.c  libsystem_notify.h  libsystem_signal.c  libsystem_signal.h  libsystem_string.c  libsystem_string.h  libsystem_support.c  libsystem_support.h
libuna/: Makefile.am  Makefile.in  libuna_definitions.h
macosx/: Introduction.rtf  Makefile.in
manuals/: Makefile.in  ewfacquire.1
(+7 files in other folders)
